# openglSnapshot

./: .gitignore  CMakeLists.txt  README.md  main.cpp
lib/: glfw3.lib
lib/imgui/: CMakeLists.txt
lib/imgui/backends/: CMakeLists.txt
lib/jolt/Jolt/: Jolt.cmake  Jolt.h
lib/jolt/Jolt/JoltPhysics/Jolt/: Jolt.cmake
lib/notInUse/: libGLEW.so.2.2.0
lib/stb/: CMakeLists.txt
res/models/: 2cone.gltf  cone.gltf  cube.gltf
res/shaders/: 2_billboard.fs  2_billboard.vs  2_default.fs  2_default.vs  default.fs  default.vs  default_bb.fs  default_bb.vs  default_jolt.fs  default_jolt.vs  nBindless.fs  user_interface.fs  user_interface.vs
src/: CMakeLists.txt  animator.cpp  animator.h  assets.h  billboard.cpp  billboard.h  camera.cpp  camera.h  camera_interface.h  controller.cpp  controller.h  controller_interface.h  gl_shaders.cpp  gl_shaders.h  glmath.h  imGui_wrapper.cpp  imGui_wrapper.h  jolt_wrapper.cpp  jolt_wrapper.h  main.cpp  main.h  makefile  model.cpp  model.h  model_interface.h  player_inventory.h  render.cpp  render.h  scene.h  shader.cpp  shader.h  typedef.h  user_interface.cpp  user_interface.h  wfc.cpp  wfc.h
src/user_interface/: UIButtons.h
